# security_use_cases_project

./: BiLSTM.ipynb  README.md  pyproject.toml
src/Deep_Learning/: BiLSTM.ipynb
src/Machine_Learning/: MachineLearning.ipynb
src/Machine_Learning/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
src/Machine_Learning/catboost_info/learn/: events.out.tfevents
src/security_use_cases_project/: MachineLearning.ipynb  Preprocessing copy.ipynb
