[project]
name = "security_use_cases_project"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Tailroil", email = "romainrequena7@gmail.com"},
]
dependencies = ["requests>=2.32.5", "pandas>=2.3.3", "pytest>=8.4.2", "seaborn>=0.13.2", "nltk>=3.9.2", "pip>=25.3", "ipykernel>=7.1.0", "scikit-learn>=1.7.2"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
